cmake_minimum_required(VERSION 3.26)
project(cses)

set(CMAKE_CXX_STANDARD 17)

add_executable(towers sorting/towers.cpp)
add_executable(traffic sorting/trafficLights.cpp)
add_executable(josephesProblemEasy sorting/josephesProblem1.cpp)
add_executable(NestedRangeCheck sorting/NestedRangeCheck.cpp)
add_executable(josephesProblem sorting/josephesProblem.cpp)
add_executable(NestedRangeCount  sorting/NestedRangeCount.cpp)
add_executable(RoomAllocation  sorting/RoomAllocation.cpp)
add_executable(FactoryMachines  sorting/FactoryMachines.cpp)
add_executable(ReadingBooks  sorting/ReadingBooks.cpp)
add_executable(SumOfThreeValues  sorting/SumOfThreeValues.cpp)
add_executable(TaskAndDeadlines  sorting/TaskAndDeadlines.cpp)
add_executable(NearestSmallerValue  sorting/NearestSmallerValue.cpp)
add_executable(ConcertTicket  sorting/ConcertTicket.cpp)
add_executable(RestaurantCustomers  sorting/RestaurantCustomers.cpp)
add_executable(MovieFestival sorting/MovieFestival.cpp)

add_executable(PointLocationTest  geometry/PointLocationTest.cpp)
add_executable(LineSegmentIntersection  geometry/LineSegmentIntersection.cpp)
add_executable( PolygonArea  geometry/PolygonArea.cpp)
